# nfs_server

./: .ansible-lint  .gitignore  .travis.yml  .yamllint  README.md  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements-monorepo.yml  requirements-standalone.yml  requirements.txt  tox.ini
.github/workflows/: molecule.yml  release-galaxy.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: ansible.cfg  converge.yml  molecule.yml  prepare.yml
molecule/default/tests/: test_datastore.py
molecule/kvm/: converge.yml  molecule.yml  prepare.yml
molecule/parallels/: ansible.cfg  converge.yml  molecule.yml  prepare.yml
tasks/: facts.yml  main.yml  nfs-entry.yml  nfs-server.yml  nfs-vgs.yml  prereq.yml  requirements.yml
vars/: main.yml
